--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.3",
-    "nodemailer": "^6.2.1"
+    "nodemailer": "^6.2.1",
+    "swagger-ui-express": "^4.0.7"
   }
 }
