--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.3",
     "nodemailer": "^6.2.1",
-    "swagger-ui-express": "^4.0.7"
+    "swagger-ui-express": "^4.0.7",
+    "multer": "^1.4.1",
+    "multer-s3": "^2.9.0",
+    "aws-sdk": "^2.468.0"
   }
 }
