--- a/package.json
+++ b/package.json
@@ -12,19 +12,22 @@
   "license": "ISC",
   "dependencies": {
     "async": "^3.1.0",
+    "aws-sdk": "^2.468.0",
     "bcrpyt": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.3",
-    "nodemailer": "^6.2.1",
-    "swagger-ui-express": "^4.0.7",
     "multer": "^1.4.1",
     "multer-s3": "^2.9.0",
-    "aws-sdk": "^2.468.0"
+    "nodemailer": "^6.2.1",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^2.0.0",
+    "swagger-ui-express": "^4.0.7"
   }
 }
