--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
+    "elasticsearch": "^16.3.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "express-validator": "^5.3.1",
