--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodemailer": "^6.2.1",
     "passport": "^0.4.0",
     "passport-google-oauth": "^2.0.0",
-    "swagger-ui-express": "^4.0.7"
+    "swagger-ui-express": "^4.0.7",
+    "winston": "^3.2.1"
   }
 }
